# premaidai_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  display.rviz  upload_premaidai.launch
meshes/: body.dae  head.dae  l_ankle.dae  l_foot.dae  l_hand.dae  l_hip_joint.dae  l_larm.dae  l_larm_joint.dae  l_lleg.dae  l_uarm.dae  l_uarm_joint.dae  l_uleg.dae  l_uleg_root.dae  larm_1x.dae  larm_2x.dae  larm_2z.dae  larm_hand.dae  lleg_1x.dae  lleg_1z.dae  lleg_2y.dae  neck.dae  neck_pitch.dae  neck_yaw.dae  r_ankle.dae  r_foot.dae  r_hand.dae  r_hip_joint.dae  r_larm.dae  r_larm_joint.dae  r_lleg.dae  r_uarm.dae  r_uarm_joint.dae  r_uleg.dae  r_uleg_root.dae  rarm_1x.dae  rarm_2x.dae  rarm_2z.dae  rarm_hand.dae  rleg_1y.dae  rleg_1z.dae  (+1 more)
robots/: premaidai.urdf.xacro
urdf/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro  body.gazebo.xacro  body.transmission.xacro  body.urdf.xacro  common.xacro  larm.urdf.xacro  leg.gazebo.xacro  leg.transmission.xacro  leg.urdf.xacro  lleg.urdf.xacro  rarm.urdf.xacro  rleg.urdf.xacro
